--- a/docs/101.md
+++ b/docs/101.md
@@ -90,7 +90,7 @@
 * 工时：
 	* 一周
 * 任务简述：
-	* 在当前任务中，我们将学习标签平滑的有关内容，阐述它的应用场景，并最终将其放在模型源码中以优化指标；同时还有介绍SWA优化器原理和使用方法，通过实现对原有优化器的替换来进一步获得更好的效果。
+	* 在该任务中，我们开始对模型效果进行优化，这是大多数算法工程师的核心工作；效果优化是一项很open的工作内容，具备很大的不确定性，很多优化方案只在特定的业务场景下才能生效。这里我们需要剖析和实现两种优化方案：1，标签平滑技术；2，SWA优化器的使用。它们是两种原理较简单，但适用范围很广的优化方式。
 
 #### 任务四：通过CLS权重分配技术和回译数据增强进行指标优化
 
